<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/rb_red"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
        >

    <ImageView
            android:id="@+id/rbu_logo"
            android:layout_width="96dp"
            android:layout_height="26dp"
            android:src="@drawable/rbu_logo"
            android:layout_marginLeft="64dp"
            android:layout_marginRight="64dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            />

    <ImageView
            android:id="@+id/rb_logo"
            android:layout_width="38dp"
            android:layout_height="48dp"
            android:src="@drawable/rb_logo"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            />

    <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/rbu_logo"
            android:layout_above="@id/rb_logo"
            >
        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical"
                >
            <TextView
                    android:layout_height="wrap_content"
                    android:text="@string/credits_producers"
                    style="@style/TextCreditRole"
                    />
            <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/credits_producer_rockbase"
                    style="@style/TextCreditMember"
                    />
            <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/credits_producer_scots"
                    style="@style/TextCreditMember"
                    />
            <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/credits_producer_rocka"
                    style="@style/TextCreditMemberLast"
                    />
            <TextView
                    android:layout_height="wrap_content"
                    android:text="@string/credits_diego"
                    style="@style/TextCreditRole"
                    />
            <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/credits_diego_name"
                    style="@style/TextCreditMemberLast"
                    />
            <TextView
                    android:layout_height="wrap_content"
                    android:text="@string/credits_alex"
                    style="@style/TextCreditRole"
                    />
            <TextView
                    android:layout_height="wrap_content"
                    android:text="@string/credits_alex_2"
                    style="@style/TextCreditRole"
                    />
            <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/credits_alex_name"
                    style="@style/TextCreditMemberLast"
                    />
            <TextView
                    android:layout_height="wrap_content"
                    android:text="@string/credits_luisa"
                    style="@style/TextCreditRole"
                    />
            <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/credits_luisa_name"
                    style="@style/TextCreditMemberLast"
                    />
            <TextView
                    android:layout_height="wrap_content"
                    android:text="@string/credits_alonso"
                    style="@style/TextCreditRole"
                    />
            <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/credits_alonso_name"
                    style="@style/TextCreditMemberLast"
                    />
            <TextView
                    android:layout_height="wrap_content"
                    android:text="@string/credits_cholo"
                    style="@style/TextCreditRole"
                    />
            <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/credits_cholo_name"
                    style="@style/TextCreditMemberLast"
                    />
            <TextView
                    android:layout_height="wrap_content"
                    android:text="@string/credits_rita"
                    style="@style/TextCreditRole"
                    />
            <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/credits_rita_name"
                    style="@style/TextCreditMemberLast"
                    />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>